--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
       body {
         font-family: sans-serif;
         color: #343a40;
+        line-height: 1;
       }
 
       .accordion {
@@ -42,8 +43,10 @@
       .item{
 
       }
-      .number{
-
+      .number, .text{
+        font-size: 24px;
+        font-weight: 500;
+        color: #087f5b;
       }
       .text{
 
@@ -54,8 +57,25 @@
         stroke: #087f5b;
       }
       .hidden-box{
-
       }
+
+      .hidden-box p{
+        line-height: 1.6;
+        margin-bottom: 24px;
+      }
+
+        .hidden-box ul {
+          color: #868e96;
+          margin-left: 20px;
+
+        display: flex;
+        flex-direction: column;
+        gap: 12px;
+      }
+
+      /* .hidden-box li{
+        margin-bottom: 12px;
+      } */
     </style>
   </head>
   <body>
