--- a/index.html
+++ b/index.html
@@ -38,12 +38,24 @@
       .accordion {
         width: 700px;
         margin: 100px auto;
+
+        display: flex;
+        flex-direction: column;
+        gap: 24px;
       }
 
       .item{
+        box-shadow: 0 0 32px rgba(0, 0, 0, 0.1);
+        padding: 24px;
 
+        display: grid;
+        grid-template-columns: auto 1fr auto;
+        column-gap: 24px;
+        row-gap: 32px;
+        align-items: center;
       }
-      .number, .text{
+      .number, 
+      .text{
         font-size: 24px;
         font-weight: 500;
         color: #087f5b;
@@ -57,6 +69,7 @@
         stroke: #087f5b;
       }
       .hidden-box{
+        grid-column: 2;
       }
 
       .hidden-box p{
@@ -80,7 +93,44 @@
   </head>
   <body>
     <div class="accordion">
-      <div class="item"></div>
+      <div class="item">
+
+      <p class="number">01</p>
+      <p class="text">Where are these chairs assembled</p>
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        fill="none"
+        viewBox="0 0 24 24"
+        stroke-width="1.5"
+        stroke="currentColor"
+        class="icon"
+      >
+        <path
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          d="m19.5 8.25-7.5 7.5-7.5-7.5"
+        />
+      </svg>
+      <div class="hidden-box">
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam
+          odio, id at hic officiis Iure deserunt enim magni consequuntur
+          quisquam laudantium, Repudiandae, eveniet laboriosam! Quisquam, quod.
+        </p>
+        <ul>
+          <li>Lorem ipsum dolor sit amet consectetur adipisicing elit</li>
+          <li>
+            Error illum, voluptatum perspiciatis exercitationem iusto non?
+          </li>
+          <li>
+            Necessitatibus veritatis obcaecati porro architecto perferendis sint
+          </li>
+          <li>Dolorum modi eum corporis harum vero fugiat quam aspernatur!</li>
+        </ul>
+        </div>
+        </div>
+      <div class="item">
+
       <p class="number">02</p>
       <p class="text">How long do I have to reture my chair</p>
       <svg
@@ -101,7 +151,7 @@
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam
           odio, id at hic officiis Iure deserunt enim magni consequuntur
-          quisquam laudantium,
+          quisquam laudantium, Repudiandae, eveniet laboriosam! Quisquam, quod.
         </p>
         <ul>
           <li>Lorem ipsum dolor sit amet consectetur adipisicing elit</li>
@@ -110,10 +160,47 @@
           </li>
           <li>
             Necessitatibus veritatis obcaecati porro architecto perferendis sint
-            nesciunt quis, nobis laborum cumque maiores facere nulla?
           </li>
           <li>Dolorum modi eum corporis harum vero fugiat quam aspernatur!</li>
         </ul>
+        </div>
+        </div>
+
+      <div class="item">
+
+      <p class="number">03</p>
+      <p class="text">Do you ship to contries outside the EU</p>
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        fill="none"
+        viewBox="0 0 24 24"
+        stroke-width="1.5"
+        stroke="currentColor"
+        class="icon"
+      >
+        <path
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          d="m19.5 8.25-7.5 7.5-7.5-7.5"
+        />
+      </svg>
+      <div class="hidden-box">
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam
+          odio, id at hic officiis Iure deserunt enim magni consequuntur
+          quisquam laudantium, Repudiandae, eveniet laboriosam! Quisquam, quod.
+        </p>
+        <ul>
+          <li>Lorem ipsum dolor sit amet consectetur adipisicing elit</li>
+          <li>
+            Error illum, voluptatum perspiciatis exercitationem iusto non?
+          </li>
+          <li>
+            Necessitatibus veritatis obcaecati porro architecto perferendis sint
+          </li>
+          <li>Dolorum modi eum corporis harum vero fugiat quam aspernatur!</li>
+        </ul>
+        </div>
         </div>
       </div>
     </div>
