--- a/index.html
+++ b/index.html
@@ -58,10 +58,11 @@
       .text{
         font-size: 24px;
         font-weight: 500;
-        color: #087f5b;
+        /* color: #087f5b; */
       }
-      .text{
-
+      
+      .number {
+        color: #ced4da;
       }
       .icon{
         width: 24px;
@@ -70,6 +71,7 @@
       }
       .hidden-box{
         grid-column: 2;
+        display: none;
       }
 
       .hidden-box p{
@@ -86,9 +88,19 @@
         gap: 12px;
       }
 
-      /* .hidden-box li{
-        margin-bottom: 12px;
-      } */
+      /* OPEN STATE */
+      .open {
+        border-top:4px solid #087f5b ;
+      }
+
+      .open .hidden-box {
+        display: block;
+      }
+
+      .open .number, 
+      .open .text {
+        color:#087f5b; 
+      }
     </style>
   </head>
   <body>
@@ -129,8 +141,7 @@
         </ul>
         </div>
         </div>
-      <div class="item">
-
+      <div class="item open">
       <p class="number">02</p>
       <p class="text">How long do I have to reture my chair</p>
       <svg
