--- a/02-index.html
+++ b/02-index.html
@@ -37,15 +37,19 @@
 
       .carousel {
         width: 800px;
+        /* padding-right: 48px; */
         margin: 100px auto;
         background-color: #087f5b;
-        padding: 32px;
-        padding-left: 86px;
+        /* padding: 32px; */
+        /* padding-left: 86px; */
+        /* padding-right: 48px; */
+        padding: 32px 48px 32px 86px;
+
         border-radius: 8px;
         position: relative;
 
         display: flex;
-        /*  align-items: center; */
+        align-items: center;
         gap: 86px;
       }
 
@@ -81,7 +85,8 @@
         width: 40px;
         border-radius: 50%;
         position: absolute;
-        top: 50%;
+        box-shadow: 0 12px 24px rgba(0, 0, 0, 0.2);
+        cursor: pointer;
 
         display: flex;
         align-items: center;
@@ -89,16 +94,46 @@
       }
 
       .btn--left {
-        left: 0;
+        /* In relation to PARENTE ELEMENT */
+        left: 0px;
+        top: 50%;
+
+        /* In relation to PARENTE ELEMENT */
+        transform: translate(-50%, -50%);
       }
 
       .btn--right {
         right: 0;
+        top: 50%;
+        transform: translate(50%, -50%);
       }
       .btn-icon {
         height: 24px;
         width: 24px;
         stroke: #087f5b;
+      }
+
+      .dots {
+        position: absolute;
+        left: 50%;
+        bottom: 0;
+        transform: translate(-50%, 32px);
+
+        display: flex;
+        gap: 12px;
+      }
+
+      .dot {
+        height: 12px;
+        width: 12px;
+        background-color: #fff;
+        border: 2px solid #087f5b;
+        border-radius: 50%;
+        cursor: pointer;
+      }
+
+      .dot--fill {
+        background-color: #087f5b;
       }
     </style>
   </head>
@@ -148,6 +183,12 @@
           />
         </svg>
       </button>
+      <div class="dots">
+        <button class="dot dot--fill">&nbsp;</button>
+        <button class="dot">&nbsp;</button>
+        <button class="dot">&nbsp;</button>
+        <button class="dot">&nbsp;</button>
+      </div>
     </div>
   </body>
 </html>
